# Novora-coach-AI-

./: .env.example  .gitignore  README.md
backend/: config.py  main.py  pyproject.toml  requirements.txt  simulate.py  verify.py
backend/agents/: __init__.py  analytics_agent.py  encouragement_agent.py  orchestrator.py  reflection_agent.py  timer_agent.py
backend/api/routes/: __init__.py  analytics.py  auth.py  chat.py  sessions.py
backend/cli/: novora_cli.py
backend/db/: models.py  session.py
backend/mcp_server/: __init__.py  server.py
backend/mcp_server/tools/: analytics_tools.py  session_tools.py  timer_tools.py
backend/security/: __init__.py  auth.py  rate_limiter.py  sandbox.py  validators.py
backend/skills/: encouragement_skill.py  pomodoro_skill.py  reflection_skill.py
backend/tests/: test_novora.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/Analytics/: Analytics.css  Analytics.jsx
frontend/src/components/Auth/: Auth.css  Auth.jsx
frontend/src/components/ChatPanel/: ChatPanel.css  ChatPanel.jsx
frontend/src/components/PomodoroTimer/: Timer.css  Timer.jsx
