[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "agents", "api", "cli", "db", "mcp_server", "security", "skills"
]

[project]
name = "novora-backend"
version = "1.0.0"
description = "Novora — Offline AI-powered Pomodoro coaching system (no API keys required)"
requires-python = ">=3.11"
dependencies = [
    # FastAPI + server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",

    # MCP (local, offline)
    "fastmcp>=0.4.0",

    # Database
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.7.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "bleach>=6.1.0",
    "slowapi>=0.1.9",
]

[project.scripts]
novora = "cli.novora_cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
